# fastapi-admin

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  elk.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/common/: __init__.py  decorators.py  excel.py  exceptions.py  pagination.py  response.py  schema.py  utils.py
app/core/: __init__.py  database.py  dependencies.py  exceptions.py  lock.py  metrics.py  redis.py  scheduler.py  security.py  tenant.py  user_context.py
app/core/utils/: area_utils.py
app/extensions/: __init__.py  captcha.py  storage.py
app/middleware/: __init__.py  auth.py  demo.py  logging.py  tenant.py
app/module/ai/: __init__.py
app/module/ai/controller/: __init__.py  ai_model.py  api_key.py  chat_conversation.py  chat_message.py  chat_role.py  image.py  knowledge.py  mind_map.py  music.py  tool.py  workflow.py  write.py
app/module/ai/model/: __init__.py  ai_model.py  api_key.py  chat_conversation.py  chat_message.py  chat_role.py  image.py  knowledge.py  knowledge_document.py  knowledge_segment.py  mind_map.py  music.py  tool.py  workflow.py  write.py
app/module/ai/schema/: __init__.py  ai_model.py  api_key.py  chat_conversation.py  chat_message.py  chat_role.py  image.py  knowledge.py  mind_map.py  music.py  tool.py  workflow.py  write.py
app/module/ai/service/: __init__.py  ai_model.py  api_key.py  chat_conversation.py  chat_message.py  chat_role.py  image.py  image_client.py  knowledge.py  mind_map.py  music.py  tool.py  workflow.py  write.py
app/module/infra/: __init__.py
app/module/infra/controller/: __init__.py  api_log.py  file.py  job.py
app/module/infra/model/: api_log.py  base.py  codegen.py  data_source.py  file.py  job.py
app/module/infra/schema/: __init__.py
app/module/infra/service/: api_log.py  file.py  job.py
app/module/system/: __init__.py
app/module/system/controller/: __init__.py  area.py  auth.py  config.py  dept.py  dict.py  log.py  mail.py  menu.py  notice.py  notify_message.py  notify_template.py  oauth2.py  online_user.py  permission.py  post.py  role.py  sms.py  sms_log.py  social.py  tenant.py  tenant_package.py  user.py
app/module/system/model/: __init__.py  base.py  config.py  dept.py  dict_data.py  dict_type.py  login_log.py  mail.py  menu.py  notice.py  notify.py  oauth2.py  online_user.py  operate_log.py  post.py  role.py  sms.py  social.py  tenant.py  user.py
migrations/: alembic.ini  env.py
migrations/versions/: .gitkeep  20260325_001_init_db.py
scripts/: fastadmin.sql  init_db.py  scheduled_tasks.py
tests/: conftest.py  test_auth.py
(+38 files in other folders)
